# lms-kdwiheldy

./: .env  .gitignore  GUIDE.md  HANDOFF.md  README.md
admin-web/: package-lock.json  package.json  tailwind.config.ts
apps/ml-service/: ARCHITECTURE.md  analogi_engine.py  requirements.txt  serve.py
client-ios/: README.md
client-ios/lms/: App.swift  (+2 more)
docs/: architecture.html  intro-panel.html  presentation.html
ml-service/: ARCHITECTURE.md  analogi_engine.py  embed_questions.py  embedder.py  math_parser.py  requirements.txt  serve.py
scripts/: QUESTION_FORMAT.md  analogi_engine.py  gen_analogi_hard.py  gen_analogi_llm.py  gen_analogi_matrix.py  mongodb_setup.js  sample_tiu.json  test_analogi_engine.py  tiu_analogi.json  tiu_analogi_2.json  tiu_antonim.json  tiu_antonim_2.json  tiu_aritmatika.json  tiu_aritmatika_2.json  tiu_deret_angka.json  tiu_deret_angka_2.json  tiu_perbandingan_kuantitatif.json  tiu_perbandingan_kuantitatif_2.json  tiu_sample.json  tiu_silogisme.json  tiu_silogisme_2.json  tiu_sinonim.json  tiu_sinonim_2.json  tiu_soal_cerita.json  tiu_soal_cerita_2.json  twk_bahasa_indonesia.json  twk_bela_negara_integritas.json  twk_bhinneka_tunggal_ika.json  twk_nkri.json  twk_pancasila.json  twk_sejarah_nasional.json  twk_sistem_pemerintahan.json  twk_uud1945.json
server/: .env.example  Cargo.toml
server/src/: config.rs  error.rs  main.rs  ml_client.rs  service_manager.rs
server/src/middleware/: auth.rs
server/src/models/: mod.rs  quiz.rs  quiz_set.rs  session.rs
server/src/routes/: mod.rs  questions.rs  quizzes.rs  sessions.rs  upload.rs
(+43 files in other folders)
